# GaCDI

./: .dockerignore  .gitignore  .shed.yml  NOTES-current-state.md  README.md  pyproject.toml
.github/scripts/: assert-public-image.sh
.github/workflows/: ci.yml  containers.yml
cli_tools/gacdi_manifest/: Dockerfile  README.md  pyproject.toml
cli_tools/gacdi_manifest/docs/: CONTRACTS.md
cli_tools/gacdi_manifest/gacdi_manifest/: __init__.py  cbioportal.py  cli.py  enrich.py  errors.py  filters.py  gdc.py  importer.py  io.py  join.py  model.py  net.py  registry.py  selection.py
cli_tools/gacdi_manifest/gacdi_manifest/download/: __init__.py  cli.py  config.py  decompress.py  detect.py  engine.py  gdc.py  pdc.py
cli_tools/gacdi_manifest/gacdi_manifest/download/sources/: __init__.py  base.py  pdc.py
cli_tools/gacdi_manifest/gacdi_manifest/manifest/: cbioportal.py  cli.py  enrich.py  filters.py  gdc.py  io.py
cli_tools/gacdi_manifest/gacdi_manifest/sources/: __init__.py  gdc.py  idc.py  pdc.py
cli_tools/gacdi_manifest/tests/: conftest.py  test_cli.py  test_cli_surface.py  test_contracts.py  test_decompress.py  test_detect.py  test_download_cli.py  test_download_gdc_network.py  test_download_pdc_network.py  test_download_sources.py  test_filters.py  test_gdc_cbio.py  test_gdc_download.py  test_golden_outputs.py  test_idc.py  test_importer_contract.py  test_io_enrich.py  test_join.py  test_model.py  test_pdc_download.py  test_postfilter.py  test_registry_contract.py  test_selection_contract.py  test_version_contract.py  test_wrapper_discovery_contract.py
cli_tools/gacdi_manifest/tests/data/: PDC_MANIFEST_NOTES.md  pdc_manifest.csv  pdc_manifest.tsv
cli_tools/gacdi_manifest/tests/golden/: gdc_manifest.txt  gdc_selection_manifest.tsv
cli_tools/mcdi/: Dockerfile  README.md  pyproject.toml
cli_tools/mcdi/mcdi/: __init__.py  cli.py  net.py
cli_tools/mcdi/mcdi/download/: archive.py  cli.py  engine.py
cli_tools/mcdi/mcdi/download/sources/: base.py  gdc.py
cli_tools/mcdi/mcdi/manifest/: cbioportal.py  cli.py  gdc.py  io.py
cli_tools/mcdi/tests/: conftest.py  test_archive.py  test_cli.py  test_download_cli.py  test_download_engine.py  test_download_gdc_network.py  test_download_pdc_network.py  test_download_sources.py  test_filters.py  test_gdc_cbio.py  test_importer_contract.py  test_io_enrich.py  test_join.py  test_model.py
containers/: Dockerfile.base  Dockerfile.cda  Dockerfile.gdc  Dockerfile.geo  Dockerfile.manifest  Dockerfile.sra
containers/downloader/: Dockerfile.base  Dockerfile.cda  Dockerfile.gdc  Dockerfile.geo  Dockerfile.sra
containers/downloader/env/: base.yml  cda.yml  gdc.yml  geo.yml
containers/env/: sra.yml
containers/manifest_builder/: Dockerfile
docs/: ARCHITECTURE.md
gacdi/: __init__.py  auth.py  base.py  bundle.py  cli.py  errors.py  history.py  manifest.py  model.py  net.py  proc.py  validation.py
gacdi/importers/: __init__.py  gdc.py  sra.py  xena.py
gacdi_manifest/: __init__.py  cbioportal.py  cli.py  enrich.py  errors.py  filters.py  gdc.py  io.py  join.py  model.py
integration_tests/: README.md  conftest.py  test_cross_tool_handoff.py  test_legacy_manifest_handoff.py  test_release_plumbing.py
tests/: conftest.py  test_base_cli.py  test_bundle.py  test_cda.py  test_cli.py  test_cli_surface.py  test_filters.py  test_gdc.py  test_gdc_cbio.py  test_gdc_e2e.py  test_golden_summary.py  test_history.py  test_importer_contract.py  test_io_enrich.py  test_manifest.py  test_model.py  test_net.py  test_registry_contract.py
tests/golden/: gdc_summary.tsv
tools/: macros.xml
tools/cda/: gacdi_cda.xml
tools/cda/test-data/: cda_query.json
tools/gacdi-downloader/: .shed.yml  gacdi-downloader.xml  macros.xml
tools/gacdi-downloader/dependencies/: Dockerfile
tools/gdc/: gacdi_gdc.xml
tools/gdc-downloader/: gdc-downloader.xml
tools/gdc-downloader/dependencies/: Dockerfile
tools/gdc-downloader/test-data/: test-manifest.txt
tools/gdc/test-data/: gdc-client  gdc_manifest.txt  selection_manifest.tsv  selection_metadata.tsv  selection_provenance.json
tools/geo/: gacdi_geo.xml
tools/manifest_downloader/: macros.xml  manifest_downloader.xml
tools/manifest_downloader/test-data/: gdc_manifest.txt  gdc_manifest_archive.txt
tools/manifest_gdc/: .shed.yml  gacdi_manifest_gdc.xml  macros.xml
tools/manifest_idc/: gacdi_manifest_idc.xml  macros.xml
tools/manifest_pdc/: gacdi_manifest_pdc.xml
tools/sra/: gacdi_sra.xml
tools/xena/: gacdi_xena.xml
