[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gacdi"
version = "0.1.0"
description = "Galaxy Cancer Data Importers — import NIH/NCI cancer datasets into Galaxy histories."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "GaCDI contributors" }]
keywords = ["galaxy", "cancer", "genomics", "gdc", "geo", "sra", "nih", "nci"]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "requests-mock>=1.11",
]

[project.scripts]
gacdi = "gacdi.cli:main"

[project.urls]
Homepage = "https://github.com/paulocilasjr/GaCDI"

[tool.hatch.build.targets.wheel]
packages = ["gacdi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that perform real network downloads (deselect with -m 'not network').",
]
