[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gacdi-manifest"
version = "0.1.0"
description = "GaCDI Manifest Builder — filter-driven manifest + enriched metadata generation for NIH/NCI cancer data repositories."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "GaCDI contributors" }]
keywords = ["galaxy", "cancer", "gdc", "manifest", "cbioportal", "tcga", "nci"]
dependencies = [
    "requests>=2.28",
    # The builder reuses the downloader's shared HTTP/manifest/model utilities
    # (gacdi.net, gacdi.manifest, gacdi.model). In this monorepo, install the
    # root `gacdi` package editable alongside this one (see README / CI).
    "gacdi>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "requests-mock>=1.11",
]

[project.scripts]
gacdi-manifest = "gacdi_manifest.cli:main"

[project.urls]
Homepage = "https://github.com/paulocilasjr/GaCDI"

[tool.hatch.build.targets.wheel]
packages = ["gacdi_manifest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that perform real network calls (deselect with -m 'not network').",
]
