[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gacdi-manifest"
dynamic = ["version"]
description = "GaCDI Manifest Builder — filter-driven manifest + enriched metadata generation for NIH/NCI cancer data repositories."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "GaCDI contributors" }]
keywords = ["galaxy", "cancer", "gdc", "manifest", "cbioportal", "tcga", "nci"]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "requests-mock>=1.11",
]

[project.scripts]
gacdi-manifest = "gacdi_manifest.cli:main"

[project.urls]
Homepage = "https://github.com/paulocilasjr/GaCDI"

[tool.hatch.version]
path = "gacdi_manifest/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["gacdi_manifest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that perform real network calls (deselect with -m 'not network').",
]
