[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcdi"
dynamic = ["version"]
description = "MCDI (Multi-Commons Data Importer) — filter-driven manifest + enriched metadata generation for NIH/NCI cancer data repositories, plus a GDC/PDC manifest downloader, via `mcdi manifest` and `mcdi download`."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "GaCDI contributors" }]
keywords = ["galaxy", "cancer", "gdc", "manifest", "cbioportal", "tcga", "nci"]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "requests-mock>=1.11",
]

[project.scripts]
mcdi = "mcdi.cli:main"

[project.urls]
Homepage = "https://github.com/goeckslab/GaCDI"

[tool.hatch.version]
path = "mcdi/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mcdi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that perform real network calls (deselect with -m 'not network').",
]
